# pythonlinting

./: README.md  main.py  pyproject.toml
.github/workflow/: ruff.yml
.github/workflows/: poetry.yml
